[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pic8259 = "0.10.1"
x86_64 = "0.14.2"
volatile = "0.2.6"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
# allow spinlock to threads look at https://en.wikipedia.org/wiki/Spinlock 
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
